[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlstudio"
version = "0.0.0"
description = "Internal RL experimentation framework (Milestone 1a scaffold)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.5",
  "types-PyYAML",
  "sphinx>=7.0",
  "myst-parser>=2.0",
  "sphinx-autodoc-typehints>=2.0"
]
docs = [
  "sphinx>=7.0",
  "myst-parser>=2.0",
  "sphinx-autodoc-typehints>=2.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = [
  "I",      # isort (import sorting)
  "B",      # bugbear
  "E", "F", # pycodestyle / pyflakes
  "UP",     # pyupgrade
  "SIM",    # simplify
  "C90"     # mccabe complexity
]
ignore = ["E203"]  # Black-style slicing spacing; W503 dropped (line break before binary op allowed by default)
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true

 # Flake8 removed in favor of Ruff (superset of checks)

